[package]
edition = "2021"
name = "ppaass-proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false
split-debuginfo = '...' # Platform-specific.

[[bin]]
name = "ppaass-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "*"
bytes = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"
hotwatch = "*"
ppaass-common = { git = "https://github.com/quhxuxm/ppaass-common" }
pretty-hex = "*"
rand = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
socket2 = "*"
tokio = { version = "*", features = ["macros", "time", "net", "io-util", "rt-multi-thread"] }
tokio-util = { version = "*", features = ["codec"] }
toml = "*"
tracing = "*"
tracing-appender = "*"
tracing-subscriber = "*"
dns-lookup = "*"
